# PyFlowCompileP4G

./: .gitattributes  .gitignore  README.md  ROADMAP.md  TODO.md  TODO_web.md  pyproject.toml
analysis/mod_survey/: MOD_SURVEY.md  run_reloaded_mod_survey.ps1
analysis/mod_survey/surprise_mod/: README.md  build_surprise_mod.ps1
analysis/mod_survey/surprise_mod/Source/: f007_night_bonus.flow  f007_night_bonus.msg
docs/: app.js  index.html  reference.html  styles.css
examples/: mod_project.py  nanako_evening_follow_along.py  patch_project.py
src/p4gscript/: __init__.py  analyzer.py  bit_registry.py  builder.py  cli.py  compiler.py  conditions.py  conflicts.py  doctor.py  domain.py  exceptions.py  expressions.py  flow.py  ids.py  msg.py  p4g.py  project.py  reporting.py  safety.py  source.py
tests/: test_analyzer.py  test_builder.py  test_cli.py  test_doctor.py  test_rendering.py  test_safety_dsl_integration.py  test_verification.py
tools/AtlusScriptTools/: AtlusFlowScriptExtractor.deps.json  AtlusMessageScriptExtractor.deps.json  AtlusScriptCompiler.deps.json  AtlusScriptDocGen.deps.json  AtlusScriptLibrary.deps.json  DumpMessageIds.deps.json  DumpProcedureIds.deps.json
verification/: python_event_project.py  verify_python_to_flow_msg.py
verification/golden/: patch_comu00.flow  patch_comu00.msg  python_event.flow  python_event.msg
