[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "p4gscript"
version = "0.1.0"
description = "Python SDK for generating Persona 4 Golden FlowScript and MessageScript sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "PersonaCompiler contributors" }
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
p4gscript = "p4gscript.cli:main"
